--- a/blog.html
+++ b/blog.html
@@ -636,12 +636,7 @@
                     <p class="main-blog__text main-blog__text--mobile">
                       Christmas is a time of giving, and we’d like to give you a
                       huge thanks for being our cherished customer. We hope your
-                      dreams come true this Christmas and The New Year, as
-                      you’ve made our dreams come true this year by simply being
-                      our customer. Have a happy, happy holiday season, and we
-                      look forward to working with you in the New Year. Please
-                      accept our warmest and sincere wishes on behalf of the
-                      VSYS Host Team!
+                      dreams come true this Christmas and The New Year
                     </p></a
                   >
                 </div>
@@ -713,7 +708,7 @@
 
                   <a class="main-blog__link" href="./article-page.html">
                     <h3 class="section-subtitle">
-                      What is unlimited bandwidth?What is unlimited bandwidth?
+                      What is unlimited bandwidth?
                     </h3>
                     <p class="main-blog__text main-blog__text--mobile">
                       Christmas is a time of giving, and we’d like to give you a
