--- a/article-page.html
+++ b/article-page.html
@@ -517,11 +517,11 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
               src="./images/blog-article__1.webp"
               alt="Article illustration"
             />
-            <h2
+            <h1
               class="section-title section-title--gradient article-page__title"
             >
               WHAT IS UNLIMITED BANDWIDTH?
-            </h2>
+            </h1>
 
             <p>
               The use of digital media for communication has become widespread.
@@ -1763,6 +1763,8 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
       </section>
     </main>
 
+    <!-- Footer  -->
+
     <footer class="vsys-footer">
       <div class="vsys-container">
         <a class="vsys-logo" href="#">
@@ -1781,8 +1783,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
               <ul>
                 <li class="footer-contact__item">
                   <a class="footer-contact__link" href="#"
-                    >Dehtyarivska street 4-A, office <br />
-                    505, Kyiv 04050, Ukraine</a
+                    >Dehtyarivska street 4-A, office 505, Kyiv 04050, Ukraine</a
                   >
                 </li>
                 <li class="footer-contact__item">
@@ -1876,39 +1877,44 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
             </li>
           </ul>
 
-          <ul class="footer-payment__list">
-            <h3 class="section-subtitle footer__subtitle">Payment system</h3>
-            <li class="footer-payment__item">
-              <svg class="footer-payment__img">
-                <use href="./images/sprite.svg#payment-bitcoin"></use>
-              </svg>
-            </li>
-            <li class="footer-payment__item">
-              <svg class="footer-payment__img">
-                <use href="./images/sprite.svg#payment-paypal"></use>
-              </svg>
-            </li>
-            <li class="footer-payment__item">
-              <svg class="footer-payment__img">
-                <use href="./images/sprite.svg#payment-bank-transfer"></use>
-              </svg>
-            </li>
-            <li class="footer-payment__item">
-              <svg class="footer-payment__img">
-                <use href="./images/sprite.svg#payment-webmoney"></use>
-              </svg>
-            </li>
-            <li class="footer-payment__item">
-              <svg class="footer-payment__img">
-                <use href="./images/sprite.svg#payment-visa"></use>
-              </svg>
-            </li>
-            <li class="footer-payment__item">
-              <svg class="footer-payment__img">
-                <use href="./images/sprite.svg#payment-mastercard"></use>
-              </svg>
-            </li>
-          </ul>
+          <div class="footer-payment__content">
+            <h3 class="section-subtitle footer__subtitle">
+              Payment <br />
+              system
+            </h3>
+            <ul class="footer-payment__list">
+              <li class="footer-payment__item">
+                <svg class="footer-payment__img">
+                  <use href="./images/sprite.svg#payment-bitcoin"></use>
+                </svg>
+              </li>
+              <li class="footer-payment__item">
+                <svg class="footer-payment__img">
+                  <use href="./images/sprite.svg#payment-paypal"></use>
+                </svg>
+              </li>
+              <li class="footer-payment__item">
+                <svg class="footer-payment__img">
+                  <use href="./images/sprite.svg#payment-bank-transfer"></use>
+                </svg>
+              </li>
+              <li class="footer-payment__item">
+                <svg class="footer-payment__img">
+                  <use href="./images/sprite.svg#payment-webmoney"></use>
+                </svg>
+              </li>
+              <li class="footer-payment__item">
+                <svg class="footer-payment__img">
+                  <use href="./images/sprite.svg#payment-visa"></use>
+                </svg>
+              </li>
+              <li class="footer-payment__item">
+                <svg class="footer-payment__img">
+                  <use href="./images/sprite.svg#payment-mastercard"></use>
+                </svg>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </footer>
