--- a/author-page.html
+++ b/author-page.html
@@ -483,6 +483,9 @@
 
       <section>
         <div class="vsys-container">
+          <h1 class="section-title section-title--gradient author__title">
+            joanne rowling
+          </h1>
           <div class="author__section">
             <div class="author__content">
               <img
@@ -1612,8 +1615,7 @@
               <ul>
                 <li class="footer-contact__item">
                   <a class="footer-contact__link" href="#"
-                    >Dehtyarivska street 4-A, office <br />
-                    505, Kyiv 04050, Ukraine</a
+                    >Dehtyarivska street 4-A, office 505, Kyiv 04050, Ukraine</a
                   >
                 </li>
                 <li class="footer-contact__item">
@@ -1707,39 +1709,44 @@
             </li>
           </ul>
 
-          <ul class="footer-payment__list">
-            <h3 class="section-subtitle footer__subtitle">Payment system</h3>
-            <li class="footer-payment__item">
-              <svg class="footer-payment__img">
-                <use href="./images/sprite.svg#payment-bitcoin"></use>
-              </svg>
-            </li>
-            <li class="footer-payment__item">
-              <svg class="footer-payment__img">
-                <use href="./images/sprite.svg#payment-paypal"></use>
-              </svg>
-            </li>
-            <li class="footer-payment__item">
-              <svg class="footer-payment__img">
-                <use href="./images/sprite.svg#payment-bank-transfer"></use>
-              </svg>
-            </li>
-            <li class="footer-payment__item">
-              <svg class="footer-payment__img">
-                <use href="./images/sprite.svg#payment-webmoney"></use>
-              </svg>
-            </li>
-            <li class="footer-payment__item">
-              <svg class="footer-payment__img">
-                <use href="./images/sprite.svg#payment-visa"></use>
-              </svg>
-            </li>
-            <li class="footer-payment__item">
-              <svg class="footer-payment__img">
-                <use href="./images/sprite.svg#payment-mastercard"></use>
-              </svg>
-            </li>
-          </ul>
+          <div class="footer-payment__content">
+            <h3 class="section-subtitle footer__subtitle">
+              Payment <br />
+              system
+            </h3>
+            <ul class="footer-payment__list">
+              <li class="footer-payment__item">
+                <svg class="footer-payment__img">
+                  <use href="./images/sprite.svg#payment-bitcoin"></use>
+                </svg>
+              </li>
+              <li class="footer-payment__item">
+                <svg class="footer-payment__img">
+                  <use href="./images/sprite.svg#payment-paypal"></use>
+                </svg>
+              </li>
+              <li class="footer-payment__item">
+                <svg class="footer-payment__img">
+                  <use href="./images/sprite.svg#payment-bank-transfer"></use>
+                </svg>
+              </li>
+              <li class="footer-payment__item">
+                <svg class="footer-payment__img">
+                  <use href="./images/sprite.svg#payment-webmoney"></use>
+                </svg>
+              </li>
+              <li class="footer-payment__item">
+                <svg class="footer-payment__img">
+                  <use href="./images/sprite.svg#payment-visa"></use>
+                </svg>
+              </li>
+              <li class="footer-payment__item">
+                <svg class="footer-payment__img">
+                  <use href="./images/sprite.svg#payment-mastercard"></use>
+                </svg>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </footer>
