--- a/dedicated.html
+++ b/dedicated.html
@@ -543,7 +543,7 @@
       </div>
     </section>
 
-    <!-- DEDICATED SERVERS IN UA PLANS & PRICING -->
+    <!-- PLANS & PRICING -->
 
     <section class="price-dedicated">
       <div class="vsys-container">
@@ -1077,27 +1077,27 @@
       </div>
     </section>
 
-    <!-- Didn`t find what you were looking for? -->
+   <!-- Contact us  -->
 
     <section class="dedicated-contact dedicated-contact__background">
-      <div class="dedicated-contact__background--svg">
-        <div class="vsys-container">
-          <div class="dedicated-contact__content">
-            <div>
-              <h2 class="section-title section-title--white">
-                DIDN'T FIND WHAT YOU WERE looKING for?
-              </h2>
-              <p class="contact__call">
-                Please write to us about what configuration you want to see in
-                promotional offers next time. We will do our best to match it
-              </p>
-            </div>
+        <div class="dedicated-contact__background--svg">
+           <div class="vsys-container">
+             <div class="dedicated-contact__content">
+               <div>
+                  <h2 class="section-title section-title--white">
+                    DIDN'T FIND WHAT YOU WERE looKING for?
+                  </h2>
+                  <p class="contact__call">
+                    Please write to us about what configuration you want to see in
+                    promotional offers next time. We will do our best to match it
+                 </p>
+               </div>
 
-            <div>
-              <a class="button button-sm button--light button--border" href="#"
-                >CONTACT US HERE AND NOW</a
-              >
-            </div>
+               <div>
+                <a class="button button-sm button--light button--border" href="#"
+                   >CONTACT US HERE AND NOW</a
+                 >
+             </div>
           </div>
         </div>
       </div>
@@ -1699,7 +1699,7 @@
       </div>
     </section>
 
-    <!-- Didn`t find what you were looking for? -->
+    <!-- Contact us -->
 
     <section class="dedicated-contact dedicated-contact__background">
       <div class="dedicated-contact__background--svg">
