--- a/blog.html
+++ b/blog.html
@@ -477,9 +477,9 @@
 
       <section class="main-article__section">
         <div class="vsys-container">
-          <h2 class="section-title section-title--gradient blog__title">
+          <h1 class="section-title section-title--gradient blog__title">
             READ OUR BLOG
-          </h2>
+          </h1>
           <!-- Main article list(min width 1200px) -->
 
           <ul class="main-article__list display-none--mobile">
@@ -759,9 +759,11 @@
           </h2>
 
           <ul class="tag__list">
-            <h4 class="section-subtitle section-subtitle--blue tag__subtitle">
-              tags
-            </h4>
+            <li class="tag__item">
+              <h4 class="section-subtitle section-subtitle--blue tag__subtitle">
+                tags
+              </h4>
+            </li>
             <li class="tag__item"><a class="tag__link" href="#">10Gbps</a></li>
             <li class="tag__item">
               <a class="tag__link" href="#">10Gbps Servers</a>
@@ -1938,8 +1940,7 @@
               <ul>
                 <li class="footer-contact__item">
                   <a class="footer-contact__link" href="#"
-                    >Dehtyarivska street 4-A, office <br />
-                    505, Kyiv 04050, Ukraine</a
+                    >Dehtyarivska street 4-A, office 505, Kyiv 04050, Ukraine</a
                   >
                 </li>
                 <li class="footer-contact__item">
@@ -2033,39 +2034,44 @@
             </li>
           </ul>
 
-          <ul class="footer-payment__list">
-            <h3 class="section-subtitle footer__subtitle">Payment system</h3>
-            <li class="footer-payment__item">
-              <svg class="footer-payment__img">
-                <use href="./images/sprite.svg#payment-bitcoin"></use>
-              </svg>
-            </li>
-            <li class="footer-payment__item">
-              <svg class="footer-payment__img">
-                <use href="./images/sprite.svg#payment-paypal"></use>
-              </svg>
-            </li>
-            <li class="footer-payment__item">
-              <svg class="footer-payment__img">
-                <use href="./images/sprite.svg#payment-bank-transfer"></use>
-              </svg>
-            </li>
-            <li class="footer-payment__item">
-              <svg class="footer-payment__img">
-                <use href="./images/sprite.svg#payment-webmoney"></use>
-              </svg>
-            </li>
-            <li class="footer-payment__item">
-              <svg class="footer-payment__img">
-                <use href="./images/sprite.svg#payment-visa"></use>
-              </svg>
-            </li>
-            <li class="footer-payment__item">
-              <svg class="footer-payment__img">
-                <use href="./images/sprite.svg#payment-mastercard"></use>
-              </svg>
-            </li>
-          </ul>
+          <div class="footer-payment__content">
+            <h3 class="section-subtitle footer__subtitle">
+              Payment <br />
+              system
+            </h3>
+            <ul class="footer-payment__list">
+              <li class="footer-payment__item">
+                <svg class="footer-payment__img">
+                  <use href="./images/sprite.svg#payment-bitcoin"></use>
+                </svg>
+              </li>
+              <li class="footer-payment__item">
+                <svg class="footer-payment__img">
+                  <use href="./images/sprite.svg#payment-paypal"></use>
+                </svg>
+              </li>
+              <li class="footer-payment__item">
+                <svg class="footer-payment__img">
+                  <use href="./images/sprite.svg#payment-bank-transfer"></use>
+                </svg>
+              </li>
+              <li class="footer-payment__item">
+                <svg class="footer-payment__img">
+                  <use href="./images/sprite.svg#payment-webmoney"></use>
+                </svg>
+              </li>
+              <li class="footer-payment__item">
+                <svg class="footer-payment__img">
+                  <use href="./images/sprite.svg#payment-visa"></use>
+                </svg>
+              </li>
+              <li class="footer-payment__item">
+                <svg class="footer-payment__img">
+                  <use href="./images/sprite.svg#payment-mastercard"></use>
+                </svg>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </footer>
