--- a/random-sections.html
+++ b/random-sections.html
@@ -43,6 +43,39 @@
   <body>
     <!-- 10GBPS DEDICATED SERVERS PLANS & PRICING -->
 
+    <section class="vl-section">
+      <!-- <div class="vl-background"></div> -->
+      <div class="vsys-container">
+        <div class="vl-content">
+          <p class="vl-slogan">love is...</p>
+          <div>
+            <img
+              class="vl-illustration"
+              src="./images/love-is-banner.svg"
+              alt="valentine day illustration"
+            />
+          </div>
+
+          <div class="vl-info">
+            <div>
+              <h3 class="vl-title">February Love formula:</h3>
+              <p class="vl-description">
+                Choose ANY product, opt for 3 months payment option, but only
+                pay for 2 months, quoting the LOVE-IS promo code at the
+                checkout. Enjoy 1 month FREE from us!
+              </p>
+            </div>
+
+            <button class="vl-button">LOVE-IS</button>
+            <p class="vl-slogan">
+              ...opt for 3 months payment option for ANY product, but pay only
+              for 2 months
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="price-dedicated">
       <div class="vsys-container">
         <h2 class="section-title section-title--gradient">
